# SweetEditor-Compose

./: .gitignore  EXCEPTION  README.md  Task-inplementation.md  Task.md  gradle.properties  settings.gradle.kts
.kotlin/metadata/kotlinTransformedMetadataLibraries/: androidx.compose.runtime-runtime-1.10.0-nativeMain-jL1lig.klib  androidx.compose.runtime-runtime-1.10.0-webMain-jL1lig.klib  androidx.compose.runtime-runtime-1.10.5-darwinMain-LBH16w.klib  androidx.compose.runtime-runtime-1.10.5-nonJvmMain-jL1lig.klib  androidx.compose.runtime-runtime-1.10.5-unixMain-jL1lig.klib  androidx.compose.runtime-runtime-retain-1.10.0-nonJvmMain-gAgqGg.klib  androidx.graphics-graphics-shapes-1.1.0-commonMain-fBTZNQ.klib  androidx.graphics-graphics-shapes-1.1.0-nonJvmMain-fBTZNQ.klib  androidx.lifecycle-lifecycle-common-2.10.0-commonMain-ENdyRA.klib  androidx.lifecycle-lifecycle-common-2.10.0-nonJvmMain-ENdyRA.klib  androidx.lifecycle-lifecycle-runtime-2.10.0-commonMain-MSpfvg.klib  androidx.lifecycle-lifecycle-runtime-2.10.0-nativeMain-MSpfvg.klib  androidx.lifecycle-lifecycle-runtime-2.10.0-nonJvmMain-MSpfvg.klib  androidx.lifecycle-lifecycle-runtime-2.10.0-webMain-MSpfvg.klib  androidx.lifecycle-lifecycle-runtime-2.9.4-webMain-IrcNlw.klib  androidx.lifecycle-lifecycle-runtime-compose-2.10.0-commonMain-UUsvAg.klib  androidx.lifecycle-lifecycle-runtime-compose-2.10.0-nonAndroidMain-UUsvAg.klib  androidx.lifecycle-lifecycle-viewmodel-2.10.0-commonMain-1eFh5A.klib  androidx.lifecycle-lifecycle-viewmodel-2.10.0-darwinMain-DPL3kg.klib  androidx.lifecycle-lifecycle-viewmodel-2.10.0-nativeMain-1eFh5A.klib  androidx.lifecycle-lifecycle-viewmodel-2.10.0-nonJvmMain-1eFh5A.klib  androidx.lifecycle-lifecycle-viewmodel-2.10.0-unixMain-1eFh5A.klib  androidx.lifecycle-lifecycle-viewmodel-2.10.0-webMain-1eFh5A.klib  androidx.lifecycle-lifecycle-viewmodel-2.9.4-webMain-YZugNA.klib  androidx.lifecycle-lifecycle-viewmodel-savedstate-2.10.0-commonMain-bNK2hQ.klib  androidx.lifecycle-lifecycle-viewmodel-savedstate-2.10.0-nativeMain-bNK2hQ.klib  androidx.lifecycle-lifecycle-viewmodel-savedstate-2.10.0-nonAndroidMain-bNK2hQ.klib  androidx.lifecycle-lifecycle-viewmodel-savedstate-2.10.0-webMain-bNK2hQ.klib  androidx.lifecycle-lifecycle-viewmodel-savedstate-2.9.4-webMain-KTe1Gw.klib  androidx.navigationevent-navigationevent-1.0.1-unixMain-CVCQsg.klib  androidx.navigationevent-navigationevent-1.0.2-commonMain-CVCQsg.klib  androidx.navigationevent-navigationevent-1.0.2-darwinMain-v-PyAQ.klib  androidx.navigationevent-navigationevent-1.0.2-nativeMain-CVCQsg.klib  androidx.savedstate-savedstate-1.3.3-webMain-NwmUsg.klib  androidx.savedstate-savedstate-1.4.0-commonMain-JkDvJw.klib  androidx.savedstate-savedstate-1.4.0-darwinMain-PeDSBw.klib  androidx.savedstate-savedstate-1.4.0-nativeMain-JkDvJw.klib  (+84 more)
docs/: platform-implementation-standard.md
editor-compose/: .gitignore  build.gradle.kts  proguard-rules.pro
editor-compose/src/androidMain/cpp/: CMakeLists.txt  android_bridge.cpp
editor-compose/src/jvmMain/cpp/: CMakeLists.txt  desktop_bridge.cpp
editor-core/: c_api.h
editor-core/ios/arm64/: libsweeteditor.dylib
example/: .gitignore  build.gradle.kts  example.jks
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
(+98 files in other folders)
